# hmta-service

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  question.md
app/: config.py  log_setup.py  main.py  zenoh_bridge.py
app/api/: capability.py  experiment.py  health.py  mission.py
app/capability/: allocation_metrics.py  allocator.py  effective_resolver.py  hypergraph.py  ontology.py  registry.py  utility.py
app/execution/: blackboard_sync.py  engine.py  param_resolver.py  tree_loader.py
app/experiment/: __init__.py  collector.py  controller.py  learner.py  mission_store.py  proficiency_store.py  store.py
app/generation/: service.py
app/oracle/: ground_truth_store.py  oracle_service.py  types.py
app/schemas/: api.py  (+6 more)
configs/: DEMO-BOMB-SEARCH.md  capability-ontology.yaml  demo-bomb-search-entities-contrast.yaml  demo-bomb-search-entities.yaml  human-profiles.yaml  pipeline.yaml
data/: experiments.db
docs/: architecture-qa.md  bt-human-machine-patterns.md  hypergraph.md  task-allocation-architecture.md  task-allocation-pipeline.md  unified-storage-design.md
tests/: test_allocator.py  test_api.py  test_command_resolver.py  test_compiler.py  test_fsm_manager.py  test_graph.py  test_human_interaction.py  test_hypergraph.py  test_main.py  test_node_registry.py  test_ontology.py  test_registry.py  test_runtime.py  test_sprint0.py  test_sprint1.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_structure_check.py  test_translator_driven.py  test_tree_loader.py  test_utility.py  test_validators.py
(+50 files in other folders)
